[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://graphics/game.png" type="Texture" id=2]
[ext_resource path="res://graphics/road.png" type="Texture" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://graphics/uibar.png" type="Texture" id=5]
[ext_resource path="res://graphics/Font_8.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 0.333333, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.666667, 0.333333, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=3]

font/size = 1
font/use_mipmaps = false
font/use_filter = false

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="bg"]

rect/min_size = Vector2( 320, 240 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 240.0

[node name="TextureFrame" type="TextureFrame" parent="bg/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Road1" type="Sprite" parent="."]

transform/pos = Vector2( 129, -60 )
texture = ExtResource( 3 )

[node name="Road2" type="Sprite" parent="."]

transform/pos = Vector2( 129, -20 )
texture = ExtResource( 3 )

[node name="Road3" type="Sprite" parent="."]

transform/pos = Vector2( 129, 20 )
texture = ExtResource( 3 )

[node name="Road4" type="Sprite" parent="."]

transform/pos = Vector2( 129, 60 )
texture = ExtResource( 3 )

[node name="Road5" type="Sprite" parent="."]

transform/pos = Vector2( 129, 100 )
texture = ExtResource( 3 )

[node name="Road6" type="Sprite" parent="."]

transform/pos = Vector2( 129, 140 )
texture = ExtResource( 3 )

[node name="Road7" type="Sprite" parent="."]

transform/pos = Vector2( 129, 180 )
texture = ExtResource( 3 )

[node name="Road8" type="Sprite" parent="."]

transform/pos = Vector2( 129, 220 )
texture = ExtResource( 3 )

[node name="Road9" type="Sprite" parent="."]

transform/pos = Vector2( 129, 260 )
texture = ExtResource( 3 )

[node name="Road10" type="Sprite" parent="."]

transform/pos = Vector2( 129, 300 )
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="TimerScore" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerFuel" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerSFuel" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="TimerCars" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerTreeLeft" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerTreeRight" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerFruits" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerEGG" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="GUI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="C" type="Control" parent="GUI"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 320, 240 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="sidebar" type="TextureFrame" parent="GUI/C"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 5 )
stretch_mode = 0

[node name="HiScore" type="Label" parent="GUI/C"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 267.0
margin/top = 19.0
margin/right = 307.0
margin/bottom = 33.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="GUI/C"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 267.0
margin/top = 50.0
margin/right = 307.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FuelBar" type="ProgressBar" parent="GUI/C"]

rect/min_size = Vector2( 40, 7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 267.0
margin/top = 81.0
margin/right = 307.0
margin/bottom = 88.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
range/min = 0.0
range/max = 60.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[connection signal="timeout" from="TimerScore" to="." method="_on_TimerScore_timeout"]

[connection signal="timeout" from="TimerFuel" to="." method="_on_TimerFuel_timeout"]

[connection signal="timeout" from="TimerSFuel" to="." method="_on_TimerSFuel_timeout"]

[connection signal="timeout" from="TimerCars" to="." method="_on_TimerCars_timeout"]

[connection signal="timeout" from="TimerTreeLeft" to="." method="_on_TimerTreeLeft_timeout"]

[connection signal="timeout" from="TimerTreeRight" to="." method="_on_TimerTreeRight_timeout"]

[connection signal="timeout" from="TimerFruits" to="." method="_on_TimerFruits_timeout"]

[connection signal="timeout" from="TimerEGG" to="." method="_on_TimerEGG_timeout"]


